# rhythmiq

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: db.py  main.py  models.py  scoring.py
backend/app/routers/: club.py  coach.py  district.py  group.py  gymnast.py  judge.py  judge_score.py  meet.py  meet_entry.py  penalty_record.py  results.py  routine.py  routine_profile.py
backend/app/schemas/: club.py  coach.py  district.py  group.py  gymnast.py  judge.py  judge_score.py  meet.py  meet_entry.py  penalty_record.py  results.py  routine.py  routine_profile.py
backend/migrations/: env.py
backend/migrations/versions/: 13c4f4f7c987_initial_schema.py  2ad8c6224b94_add_meet_medal_cutoffs.py  5f281affff03_add_scoring_judges_judge_scores_.py  7f9486184787_add_penalty_records.py  a22c63eaf9c0_add_u7_u9_u11_o11_age_groups.py  b3f1c9d47e20_replace_judge_brevet_with_category_enum.py  d580371f305c_bib_must_be_unique_per_meet.py  f4a1c2d3e5b6_add_u13_u15_o15_age_groups.py
backend/scripts/: export_openapi.py  import_roster.py  seed_demo_data.py
backend/test/: conftest.py  test_scoring.py
backend/test/test_models/: test_club.py  test_coach.py  test_district.py  test_group.py  test_gymnast.py  test_judge.py  test_judge_score.py  test_meet.py  test_meet_entry.py  test_routine.py  test_routine_profile.py
backend/test/test_routers/: conftest.py  test_club_router.py  test_coach_router.py  test_district_router.py  test_gymnast_router.py  test_judge_router.py  test_judge_score_router.py  (+5 more)
(+116 files in other folders)
