[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rhytmiq"
version = "0.1.0"
description = "FIG-compliant API for managing rhythmic gymnastics meets"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", ".git", "__pycache__", ".pytest_cache", "dist", "build"]

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort (import sorting)
  "UP",    # pyupgrade
  "C4",    # flake8-comprehensions
  "B",     # flake8-bugbear
  "TID",   # flake8-tidy-imports
]
ignore = [
  "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
